--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 10</title>
+    <title>Homework 11</title>
   </head>
   <body>
-    <input type="text" id="search-box" />
-    <ul class="country-list"></ul>
-    <div class="country-info"></div>
+    <form class="search-form" id="search-formid">
+      <div class="search-input-box">
+        <input
+          class="search-input js-input"
+          type="text"
+          name="searchQuery"
+          autocomplete="off"
+          placeholder="Search images..."
+        />
+        <button class="input-btn" type="submit">
+          <svg width="20px" height="20px">
+            <use href="./images/symbol-defs.svg#icon-search"></use>
+          </svg>
+        </button>
+      </div>
+    </form>
+    <div class="gallery"></div>
+    <button type="button" class="load-more load-more__js">Load more</button>
 
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
